--- a/_includes/schema/presets/description.html
+++ b/_includes/schema/presets/description.html
@@ -1,19 +1,11 @@
+{%- assign title = "description" -%}
 <li>
   <details open>
-    <summary> description
-      {%- if include.param.required == nil or include.param.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [array]
-    </summary>
-    <h5>{{ site.data.i18n.form.presets.description.label.schema[page.lang] }}</h5>
-    <p>{{ site.data.i18n.form.presets.description.title[page.lang] }}</p>
-    <h5>{{ site.data.i18n.form.presets.description.labels.what.subtitle[page.lang] }} </h5>
-      <ul>
-        <li>{{ site.data.i18n.form.presets.description.titles.en[page.lang] }}{% if include.param.required == nil or include.param.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [string]</li>
-        <li>{{ site.data.i18n.form.presets.description.titles.fr[page.lang] }}{% if include.param.required == nil or include.param.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [string]</li>
-      </ul>
-    <h5>{{ site.data.i18n.form.presets.description.labels.how.subtitle[page.lang] }} </h5>
-      <ul>
-        <li>{{ site.data.i18n.form.presets.description.titles.en[page.lang] }} [string]</li>
-        <li>{{ site.data.i18n.form.presets.description.titles.fr[page.lang] }} [string]</li>
-      </ul>
+    <summary>{{ title }} {% include schema/components/required.html %} [array]</summary>
+    <p>{{ site.data.i18n.form[include.idPreset][title].title[page.lang] }}</p>
+    <ul class="list-unstyled">
+      {%- include schema/components/li-i18n-group.html id=include.idPreset title=title group="what" -%}
+      {%- include schema/components/li-i18n-group.html id=include.idPreset title=title group="how" param=site.data.forms.param.required_false -%}
+    </ul>
   </details>
 </li>
