Features/open source code new design (#655)
* Update open Source Code Form according to new design

* Add new field Category in code form and Add a list based on the taxonomy

* Update some fields in open Source Code Form according to new design

* Change the order of the fields in open source code form

* Update schemaCode.yaml file and fix YanalLint errors

* Fix html5validator errors

* Update description field in codeTable.html file

* Language requested for OSC form: When a user a filling an english form, fields in english should be requested first, then french. And vice versa.

* Add number of characters limit next to project name field in OSC form

* Update number of characters limit next to project name field and description field in OSC form

* Add a list of the most common licenses

* Update metadata schema according to new design

* Create autocomplete list for licenses spdxid

* Delete licenses.yml file

* Delete comments in autocomplete-input-spdx.js file

* Add a list of the most common licenses

* Update schemaCode.yml file and code_mandatory.yaml file according to new design

* Update codeForm.js file

* Fix lint and yamllint errors

* Minor corrections

* Correction of description in schema

--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -140,7 +140,7 @@
             <td>{{ administration[0].name[page.lang] }}</td>
 
             <td><a href="#{{ release.name[page.lang] | slugify }}" aria-controls="{{ release.name[page.lang] | slugify }}" class="overlay-lnk" role="button" >{{ release.name[page.lang] }}</a></td>
-            <td>{{ release.description[page.lang] }}</td>
+            <td>{{ release.description.whatItDoes[page.lang] }}</td>
             <td>
               {%- for licence in release.licences -%}
                 <a href="{{ licence.URL[page.lang] }}" target="_blank">{{ licence.spdxID }}</a>&nbsp;
