--- a/_includes/form/components/group-i18n-group.html
+++ b/_includes/form/components/group-i18n-group.html
@@ -1,10 +1,15 @@
+{%- if page.lang == "en" -%}
+{%- assign lang1 = "en" -%}
+{%- assign lang2 = "fr" -%}
+{%- else -%}
+{%- assign lang1 = "fr" -%}
+{%- assign lang2 = "en" -%}
+{%- endif -%}
 <div class="form-group">
-  {%- assign lang = "en" %}
-  {% include form/components/label-i18n-group.html id=include.id title=include.title param=include.param lang=lang group=include.group %}
-  {% include form/components/input-i18n-group.html title=include.title param=include.param lang=lang group=include.group %}
+  {% include form/components/label-i18n-group.html id=include.id title=include.title param=include.param lang=lang1 group=include.group %}
+  {% include form/components/input-i18n-group.html title=include.title param=include.param lang=lang1 group=include.group %}
 </div>
 <div class="form-group">
-  {%- assign lang = "fr" %}
-  {% include form/components/label-i18n-group.html id=include.id title=include.title param=include.param lang=lang group=include.group %}
-  {% include form/components/input-i18n-group.html title=include.title param=include.param lang=lang group=include.group %}
+  {% include form/components/label-i18n-group.html id=include.id title=include.title param=include.param lang=lang2 group=include.group %}
+  {% include form/components/input-i18n-group.html title=include.title param=include.param lang=lang2 group=include.group %}
 </div>
