--- a/_includes/form/components/input-i18n.html
+++ b/_includes/form/components/input-i18n.html
@@ -1,5 +1,5 @@
 {%- capture name %}{{ include.param.prepend }}{{ include.lang }}{{ include.title }}{% endcapture -%}
 <input class="form-control" id="{{ name }}" name="{{ name }}" type="{{ include.param.type | default: "text" }}"
-{%- if include.param.type == "tel" %} placeholder="123-456-7890"{% endif -%}
+{%- if include.param.maxLength %} maxlength="{{ include.param.maxLength }}"{% endif -%}
 {% include form/components/rules.html rules=include.param.rule %}
 {%- if include.param.required == nil or include.param.required %} required="required"{% endif %} />
