--- a/_includes/form/components/title.html
+++ b/_includes/form/components/title.html
@@ -1,2 +1,4 @@
 {%- capture path -%}{{ include.param.prepend }}{{ include.title }}{%- endcapture -%}
-<h2>{{ site.data.i18n.form.[include.id][path].title[page.lang] }}</h2>
+<h2>{{ site.data.i18n.form.[include.id][path].title[page.lang] }}
+<span data-toggle="tooltip" data-placement="top" title="{{ site.data.i18n.form[include.id][path].infobulle[page.lang] }}" class="glyphicon glyphicon-question-sign small" aria-hidden="true"></span>
+</h2>
