--- a/_includes/form/presets/category.html
+++ b/_includes/form/presets/category.html
@@ -1,4 +1,4 @@
-{%- assign title = "provinceSelect" -%}
+{%- assign title = "category" -%}
 {%- include form/components/title.html id=include.idPreset title=title -%}
 
 <div class="form-group">
@@ -6,8 +6,8 @@
 {%- include form/components/label.html id=include.idPreset title=title %}
   <select class="form-control" id="{{ title }}" name="{{ title }}" required="required">
     <option value="">&nbsp;</option>
-    {%- for province in site.data.i18n.provinces -%}
-    <option value="{{ province[1].value }}">{{ province[1][page.lang] }}</option>
+    {%- for category in site.data.i18n.categories -%}
+    <option value="{{ category[1].value }}">{{ category[1][page.lang] }}</option>
     {%- endfor %}
   </select>
 </div>
