--- a/_includes/form/presets/selectSoftware.html
+++ b/_includes/form/presets/selectSoftware.html
@@ -10,5 +10,4 @@
   </select>
 </div>
 
-{% include form/components/title.html id=include.id title=title -%}
-{% include form/components/group-i18n.html id=include.id title=title -%}
+{%- include form/presets/name.html id=include.id -%}
