--- a/_includes/form/presets/selectCode.html
+++ b/_includes/form/presets/selectCode.html
@@ -7,6 +7,4 @@
   </select>
 </div>
 
-{% include form/components/title.html id=include.id title=title -%}
-<p><small style="font-size: 11.4px">{{ site.data.i18n.form.code.name.charactersLimit[page.lang] }}</small></p>
-{% include form/components/group-i18n.html id=include.id title=title param=site.data.forms.param.selectCode -%}
+{%- include form/presets/name.html id=include.id -%}
