--- a/_includes/form/presets/selectStandard.html
+++ b/_includes/form/presets/selectStandard.html
@@ -12,3 +12,6 @@
 
 {% include form/components/title.html id=include.id title=title -%}
 {% include form/components/group.html id=include.id title=title -%}
+
+{%- include form/presets/name.html id=include.id -%}
+
