--- a/_includes/form/widgets/select.html
+++ b/_includes/form/widgets/select.html
@@ -4,7 +4,8 @@
   <select class="form-control" id="{{ include.title }}" name="{{ include.title }}"{% if include.param.required == nil or include.param.required %} required="required"{% endif %}>
     <option value="">&nbsp;</option>
     {%- for option in include.param.options -%}
-      <option value="{{ option }}">{{ site.data.i18n.form[include.id][include.title].options[option][page.lang] }}</option>
+      {%- capture o -%}{{ option }}{%- endcapture -%}
+      <option value="{{ o }}">{{ site.data.i18n.form[include.id][include.title].options[o][page.lang] }}</option>
     {%- endfor -%}
   </select>
 </div>
