--- a/_includes/form/presets/name.html
+++ b/_includes/form/presets/name.html
@@ -1,4 +1,4 @@
 {%- assign title = "name" -%}
 {% include form/components/title.html id=include.id title=title -%}
-<p><small style="font-size: 11.4px">{{ site.data.i18n.form.presets.name.charactersLimit[page.lang] }}</small></p>
+<p><small style="font-size: 70%">{{ site.data.i18n.form.presets.name.charactersLimit[page.lang] }}</small></p>
 {% include form/components/group-i18n.html id=include.id title=title param=site.data.forms.param.name -%}
