--- a/_includes/codeRepoGroups.html
+++ b/_includes/codeRepoGroups.html
@@ -1,9 +1,8 @@
 <div class="row">
   <ul class="list-unstyled">
-    {%- for i in (1..4) -%}
-    <li>
+    {%- for levels in site.data.i18n.administrations -%}
+      {%- assign level = levels[0] -%}
       <details>
-        {%- capture level -%}{%- cycle 'federal', 'provincial', 'municipal', 'aboriginal' -%}{%- endcapture -%}
         <summary>{{ site.data.i18n.administrations[level][page.lang] }}</summary>
         <div class="list-group">
           {%- assign repo_arr = "" | split: ',' -%}
