--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -14,7 +14,7 @@
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
             {%- endif -%}
           {%- else -%}
-          <option disabled>{{ site.data.i18n.form.presets.adminCode.noAdmins[page.lang] }}</option>
+          <option value="" disabled>{{ site.data.i18n.form.presets.adminCode.noAdmins[page.lang] }}</option>
           {% endfor %}
         </optgroup>
       {%- endfor -%}
