--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -8,13 +8,14 @@
       <option value="">&nbsp;</option>
       {%- for levels in site.data.i18n.administrations -%}
         {%- assign level = levels[0] -%}
+        <!-- {{ s }} -->
         <optgroup data-value="{{ site.data.i18n.administrations[level].value }}" label="{{ site.data.i18n.administrations[level][page.lang] }}">
           {%- for org in site.data.administrations[level] -%}
             {%- if org.name[page.lang] != nil %}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
             {%- endif -%}
           {%- else -%}
-          <option value="" disabled>{{ site.data.i18n.form.presets.adminCode.noAdmins[page.lang] }}</option>
+          <option disabled>{{ site.data.i18n.form.presets.adminCode.noAdmins[page.lang] }}</option>
           {% endfor %}
         </optgroup>
       {%- endfor -%}
