--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -112,11 +112,12 @@
 
 <!-- Data Table -->
 <div class="col-md-9 mrgn-bttm-lg">
-  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [0,4,5,7,8,9,10,11,12], "visible": false}], "paging": true}'>
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [12, "desc"], "columnDefs": [{"targets": [0,5,6,8,9,10,11,12,13], "visible": false}], "paging": true}'>
     <thead>
       <tr>
         <th>{{ site.data.i18n.tables.administration[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.projectName[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.category[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.licence[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
@@ -140,6 +141,14 @@
             <td>{{ administration[0].name[page.lang] }}</td>
 
             <td><a href="#{{ release.name[page.lang] | slugify }}" aria-controls="{{ release.name[page.lang] | slugify }}" class="overlay-lnk" role="button" >{{ release.name[page.lang] }}</a></td>
+            <td>
+              {%- assign cat = release.category -%}
+              {%- for category in site.data.i18n.categories -%}
+                  {%- if category[1].value == cat -%}
+                    {{ category[1][page.lang] }}
+                  {%- endif -%}
+              {%- endfor -%}
+            </td>
             <td>{{ release.description.whatItDoes[page.lang] }}</td>
             <td>
               {%- for licence in release.licences -%}
