--- a/_includes/form/components/admin/orgLevel.html
+++ b/_includes/form/components/admin/orgLevel.html
@@ -1,9 +1,6 @@
-{% assign title = "orgLevel" %}
-{% include form/components/title.html id=include.idPreset title=title -%}
-
 <div class="form-group">
-  {% include form/components/label.html id=include.idPreset title=title %}
-  <select class="form-control" id="{{ title }}" name="{{ title }}" required="required">
+  {% include form/components/label.html id=include.idPreset title=include.title param=include.param %}
+  <select class="form-control" id="{{ include.title }}" name="{{ include.title }}"{% if include.param.required == nil or include.param.required %} required="required"{% endif %}>
     <option value="">&nbsp;</option>
     <option value="{{ site.data.i18n.administrations.aboriginal.value }}">{{ site.data.i18n.administrations.aboriginal[page.lang] }}</option>
     <option value="{{ site.data.i18n.administrations.municipal.value }}" selected>{{ site.data.i18n.administrations.municipal[page.lang] }}</option>
