Update mandatory language for required inputs

--- a/_includes/form/presets/tags.html
+++ b/_includes/form/presets/tags.html
@@ -17,7 +17,7 @@
   <div id="tags{{ lang2 | upcase }}" class="form-group">
     {% include form/components/label-i18n.html id=include.idPreset title=title lang=lang2 %}
     <div class="control-group input-group col-xs-2 mrgn-tp-md">
-      <input type="text" id="{{ lang2 }}{{ title }}" name="{{ lang2 }}{{ title }}" class="form-control" required="required">
+      <input type="text" id="{{ lang2 }}{{ title }}" name="{{ lang2 }}{{ title }}" class="form-control">
     </div>
   </div>
 </div>
