--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -35,6 +35,27 @@
       </div>
 
       <div class="form-group">
+        <label for="dt_category">{{ site.data.i18n.tables.category[page.lang] }}</label>
+        <select class="form-control" id="dt_category" name="dt_category" data-column="5">
+          <option value="">&nbsp;</option>
+          {%- assign cat_arr = "" | split: ',' -%}
+          {%- for govLevels in site.data.code -%}
+            {%- for admin in govLevels[1] -%}
+              {%- for release in admin[1].releases -%}
+                {%- if release.category != nil -%}
+                  {%- assign cat_arr = cat_arr | push: release.category -%}
+                {%- endif -%}
+              {%- endfor -%}
+            {%- endfor -%}
+          {%- endfor -%}
+          {%- assign cat_arr = cat_arr | uniq -%}
+          {%- for cat in cat_arr -%}
+            <option value="{{ site.data.i18n.categories[cat][page.lang] }}">{{ site.data.i18n.categories[cat][page.lang] }}</option>
+          {%- endfor -%}
+        </select>
+      </div>
+
+      <div class="form-group">
         <label for="dt_organization">{{ site.data.i18n.tables.organization[page.lang] }}</label>
         <select class="form-control" id="dt_organization" name="dt_organization" data-column="5">
           <option value="">&nbsp;</option>
@@ -112,11 +133,12 @@
 
 <!-- Data Table -->
 <div class="col-md-9 mrgn-bttm-lg">
-  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [0,4,5,7,8,9,10,11,12], "visible": false}], "paging": true}'>
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [12, "desc"], "columnDefs": [{"targets": [0,5,6,8,9,10,11,12,13], "visible": false}], "paging": true}'>
     <thead>
       <tr>
         <th>{{ site.data.i18n.tables.administration[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.projectName[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.category[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.licence[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
@@ -140,6 +162,9 @@
             <td>{{ administration[0].name[page.lang] }}</td>
 
             <td><a href="#{{ release.name[page.lang] | slugify }}" aria-controls="{{ release.name[page.lang] | slugify }}" class="overlay-lnk" role="button" >{{ release.name[page.lang] }}</a></td>
+            <td>
+              {{ site.data.i18n.categories[release.category][page.lang] }}
+            </td>
             <td>{{ release.description.whatItDoes[page.lang] }}</td>
             <td>
               {%- for licence in release.licences -%}
