--- a/_includes/form/components/input-i18n-group.html
+++ b/_includes/form/components/input-i18n-group.html
@@ -1,4 +1,4 @@
 {%- capture name %}{{ include.param.prepend }}{{ include.lang }}{{ include.title }}{{ include.group }}{% endcapture -%}
 <input class="form-control" id="{{ name }}" name="{{ name }}" type="{{ include.param.type | default: "text" }}"
 {% include form/components/rules.html rules=include.param.rule %}
-{%- if include.param.required-i18n or include.lang == page.lang and include.param.required == nil or include.param.required -%} required="required"{% endif %} />
+{%- if include.param.required-i18n or include.lang == page.lang and include.param.required == nil or include.param.required %} required="required"{% endif %} />
