update oss table

--- a/_includes/softwareTable.html
+++ b/_includes/softwareTable.html
@@ -100,7 +100,7 @@
         <tr>
           <td><a href="#{{ software.name[page.lang] | slugify }}" aria-controls="{{ software.name[page.lang] | slugify }}" class="overlay-lnk" role="button">{{ software.name[page.lang] }}</a></td>
           <td>
-            {{ site.data.i18n.categories[release.category][page.lang] }}
+            {{ site.data.i18n.categories[software.category][page.lang] }}
           </td>
           <td>{{ software.description.whatItDoes[page.lang] }}</td>
           <td>
