Update mandatory language for forms fields (#695)
* Update mandatory language for required inputs

* Update yamale schemas and and update travis file

* Fix html5validator errors

--- a/_includes/form/components/input-i18n.html
+++ b/_includes/form/components/input-i18n.html
@@ -2,4 +2,4 @@
 <input class="form-control" id="{{ name }}" name="{{ name }}" type="{{ include.param.type | default: "text" }}"
 {%- if include.param.maxLength %} maxlength="{{ include.param.maxLength }}"{% endif -%}
 {% include form/components/rules.html rules=include.param.rule %}
-{%- if include.param.required == nil or include.param.required %} required="required"{% endif %} />
+{%- if include.param.required-i18n or include.lang == page.lang and include.param.required == nil or include.param.required %} required="required"{% endif %} />
