--- a/_includes/form/components/label-i18n.html
+++ b/_includes/form/components/label-i18n.html
@@ -1,4 +1,4 @@
 <label for="{{ include.param.prepend }}{{ include.lang }}{{ include.title }}"
-{%- if include.param.required == nil or include.param.required %} class="required"{% endif -%}
+{%- if include.param.required-i18n or include.lang == page.lang and include.param.required == nil or include.param.required %} class="required"{% endif -%}
 ><span class="field-name">{{ site.data.i18n.form[include.id][path].label[include.lang][page.lang] }}</span>
 </label>
