--- a/_includes/softwareTable.html
+++ b/_includes/softwareTable.html
@@ -7,7 +7,7 @@
     <form class="wb-tables-filter" data-bind-to="dataset-filter">
       <div class="form-group">
         <label for="dt_govLevel">{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</label>
-        <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="6">
+        <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="7">
           <option value="">&nbsp;</option>
           {%- for govLevel in site.data.i18n.administrations -%}
           <option value="{{ govLevel[1].value }}">{{ govLevel[1][page.lang] }}</option>
@@ -17,7 +17,7 @@
 
       <div class="form-group">
         <label for="dt_category">{{ site.data.i18n.tables.category[page.lang] }}</label>
-        <select class="form-control" id="dt_category" name="dt_category" data-column="5">
+        <select class="form-control" id="dt_category" name="dt_category" data-column="1">
           <option value="">&nbsp;</option>
           {%- assign cat_arr = "" | split: ',' -%}
           {%- for software in site.data.software -%}
@@ -34,7 +34,7 @@
 
       <div class="form-group">
         <label for="dt_licence">Licence</label>
-        <select class="form-control" id="dt_licence" name="dt_licence" data-column="2">
+        <select class="form-control" id="dt_licence" name="dt_licence" data-column="3">
           <option value="">&nbsp;</option>
           {%- assign licence_arr = "" | split: ',' -%}
           {%- for software in site.data.software -%}
@@ -51,7 +51,7 @@
 
       <div class="form-group">
         <label for="dt_tag">Tag</label>
-        <select class="form-control" id="dt_tag" name="dt_tag" data-column="3">
+        <select class="form-control" id="dt_tag" name="dt_tag" data-column="4">
           <option value="">&nbsp;</option>
           {%- assign tag_arr = "" | split: ',' -%}
           {%- for software in site.data.software -%}
@@ -100,7 +100,7 @@
         <tr>
           <td><a href="#{{ software.name[page.lang] | slugify }}" aria-controls="{{ software.name[page.lang] | slugify }}" class="overlay-lnk" role="button">{{ software.name[page.lang] }}</a></td>
           <td>
-            {{ site.data.i18n.categories[release.category][page.lang] }}
+            {{ site.data.i18n.categories[software.category][page.lang] }}
           </td>
           <td>{{ software.description.whatItDoes[page.lang] }}</td>
           <td>
