Update codeTable filter

--- a/_includes/standardTable.html
+++ b/_includes/standardTable.html
@@ -52,7 +52,7 @@
       <tr>
         <th>{{ site.data.i18n.tables.standard[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
-        <th>{{ site.data.i18n.tables.organization[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.team[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
         <th>{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</th>
       </tr>
