--- a/_includes/softwareTable.html
+++ b/_includes/softwareTable.html
@@ -87,7 +87,7 @@
         <th>{{ site.data.i18n.tables.software[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.category[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
-        <th>{{ site.data.i18n.tables.licence[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.licence[page.lang] }}(s)</th>
         <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.usage[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.homepage[page.lang] }}</th>
