--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -56,7 +56,7 @@
       </div>
 
       <div class="form-group">
-        <label for="dt_organization">{{ site.data.i18n.tables.organization[page.lang] }}</label>
+        <label for="dt_organization">{{ site.data.i18n.tables.team[page.lang] }}</label>
         <select class="form-control" id="dt_organization" name="dt_organization" data-column="6">
           <option value="">&nbsp;</option>
           {%- assign org_arr = "" | split: ',' -%}
@@ -140,9 +140,9 @@
         <th>{{ site.data.i18n.tables.projectName[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.category[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
-        <th>{{ site.data.i18n.tables.licence[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.licence[page.lang] }}(s)</th>
         <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
-        <th>{{ site.data.i18n.tables.organization[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.team[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.codeRepo[page.lang] }}</th>
         <th>{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.languages[page.lang] }}</th>
@@ -219,20 +219,20 @@
           {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[0] -%}
           <p>{{ site.data.i18n.tables.administration[page.lang] }}: {{ administration[0].name[page.lang] }}</p>
         {%- if release.organization[page.lang] != nil -%}
-          <p>{{ site.data.i18n.tables.organization[page.lang] }}: {{ release.organization[page.lang] }}</p>
+          <p>{{ site.data.i18n.tables.team[page.lang] }}: {{ release.organization[page.lang] }}</p>
         {%- endif -%}
         <p>{{ site.data.i18n.tables.lightbox.sourceCode[page.lang] }}:
           <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
               {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
           </a>
         </p>
-        <p>{{ site.data.i18n.tables.licence[page.lang] }}:</p>
+        <p>{{ site.data.i18n.tables.licence[page.lang] }}(s):</p>
         <ul>
           {%- for licence in release.licences -%}
             <li><a href="{{ licence.URL[page.lang] }}" target="_blank">{{ licence.spdxID }}</a></li>
           {%- endfor -%}
         </ul>
-        <p>{{ site.data.i18n.tables.tag[page.lang] }}:</p>
+        <p>{{ site.data.i18n.tables.tag[page.lang] }}(s):</p>
         <ul>
           {%- for tag in release.tags[page.lang] -%}
             <li>{{ tag }}</li>
