Update mandatory language for required inputs

--- a/_includes/form/presets/description.html
+++ b/_includes/form/presets/description.html
@@ -4,7 +4,7 @@
 <div class="col-sm-6">
 <h3>{{ site.data.i18n.form.presets.description.labels.whatItDoes.subtitle[page.lang] }} </h3>
 <p><small style="font-size: 75%">{{ site.data.i18n.form.presets.description.charactersLimit[page.lang] }}</small> </p>
-{%- include form/components/textarea-i18n.html id=include.idPreset title=title group="whatItDoes" param=site.data.forms.param.description -%}
+{%- include form/components/textarea-i18n.html id=include.idPreset title=title group="whatItDoes" -%}
 </div>
 <div class="col-sm-6">
 <h3>{{ site.data.i18n.form.presets.description.labels.howItWorks.subtitle[page.lang] }} </h3>
