--- a/_includes/form/components/admin/select.html
+++ b/_includes/form/components/admin/select.html
@@ -1,4 +1,4 @@
-<select class="form-control" id="{{ title }}" name="{{ title }}" required="required">
+<select class="form-control" id="{{ title }}" name="{{ title }}" {% if include.param.required == nil or include.param.required %} required="required"{% endif %}>
   <option value="">&nbsp;</option>
   {%- for levels in site.data.i18n.administrations -%}
     {%- assign level = levels[0] -%}
