--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -133,7 +133,7 @@
 
 <!-- Data Table -->
 <div class="col-md-9 mrgn-bttm-lg">
-  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [12, "desc"], "columnDefs": [{"targets": [0,5,6,8,9,10,11,12,13], "visible": false}], "paging": true}'>
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [0,5,6,8,9,10,11,12,13], "visible": false}], "paging": true}'>
     <thead>
       <tr>
         <th>{{ site.data.i18n.tables.administration[page.lang] }}</th>
