--- a/_includes/form/components/admin/new.html
+++ b/_includes/form/components/admin/new.html
@@ -3,7 +3,7 @@
 <div id="{{ titleAdmin }}" class="well hide" style="position:relative;">
 <h2 class="h1 text-center">{{ site.data.i18n.form.[id][titleAdmin].title[page.lang] }}</h2>
 <button id="removeNewAdminButton" style="position: absolute; top: 10px; right: 10px;" class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-{% include form/components/admin/orgLevel.html idPreset=include.idPreset title="orgLevel" %}
+{% include form/components/admin/orgLevel.html idPreset=include.idPreset title="orgLevel" all=false %}
 {% include form/components/admin/provinceSelect.html idPreset=include.idPreset title="provinceSelect" %}
 {% include form/widgets/string-i18n.html id=id title="newAdminName" param=site.data.forms.param.newAdmin.name -%}
 </div>
