--- a/_includes/form/components/admin/orgLevel.html
+++ b/_includes/form/components/admin/orgLevel.html
@@ -2,7 +2,7 @@
   {% include form/components/label.html id=include.idPreset title=include.title param=include.param %}
   <select class="form-control" id="{{ include.title }}" name="{{ include.title }}"{% if include.param.required == nil or include.param.required %} required="required"{% endif %}>
     <option value="">&nbsp;</option>
-    <option value="{{ site.data.i18n.administrations.others.value }}">{{ site.data.i18n.administrations.others[page.lang] }}</option>
+    {% if include.all %}<option value="{{ site.data.i18n.administrations.others.value }}">{{ site.data.i18n.administrations.others[page.lang] }}</option>{% endif %}
     <option value="{{ site.data.i18n.administrations.aboriginal.value }}">{{ site.data.i18n.administrations.aboriginal[page.lang] }}</option>
     <option value="{{ site.data.i18n.administrations.municipal.value }}" selected>{{ site.data.i18n.administrations.municipal[page.lang] }}</option>
     <option value="{{ site.data.i18n.administrations.provincial.value }}" disabled>{{ site.data.i18n.administrations.provincial[page.lang] }}</option>
