--- a/_includes/form/components/label.html
+++ b/_includes/form/components/label.html
@@ -1,5 +1,4 @@
 {%- capture path -%}{{ include.param.prepend }}{{ include.title }}{%- endcapture -%}
-<label for="{{ path }}"
-{%- if include.param.required == nil or include.param.required %} class="required"{% endif -%}
-><span class="field-name">{{ site.data.i18n.form[include.id][path].label[page.lang] }}</span>
+<label for="{{ path }}"{%- if include.param.required == nil or include.param.required %} class="required"{% endif -%}>
+<span class="field-name h2">{{ site.data.i18n.form[include.id][path].label[page.lang] }}</span>
 </label>
