--- a/_layouts/form.html
+++ b/_layouts/form.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 {{ content }}
-<div class="wb-frmvld">
+
+<div class="wb-frmvld mrgn-tp-lg">
   <form action="#" method="get" id="validation">
 {%- assign idPreset = "presets" %}
 
