--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -10,6 +10,8 @@
         <li><a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}">{{ site.data.i18n.general.nav.software[page.lang] }}</a></li>
       {%- elsif page.ref == 'standardForm' or page.ref == 'standardSchema' -%}
         <li><a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}">{{ site.data.i18n.general.nav.standard[page.lang] }}</a></li>
+      {%- elsif page.ref == 'partnershipForm' or page.ref == 'partnershipSchema' -%}
+        <li><a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}">{{ site.data.i18n.general.nav.partnership[page.lang] }}</a></li>
       {%- endif -%}
     </ol>
   </div>
