--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,6 +54,7 @@
         <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.code.link[page.lang] }}">{{ site.data.i18n.general.nav.code[page.lang] }}</a></li>
         <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.software.link[page.lang] }}">{{ site.data.i18n.general.nav.software[page.lang] }}</a></li>
         <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}">{{ site.data.i18n.general.nav.standard[page.lang] }}</a></li>
+        <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}">{{ site.data.i18n.general.nav.partnership[page.lang] }}</a></li>
         <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a></li>
       </ul>
     </div>
