Updated schema github doc

--- a/_includes/schema/presets/selectStandard.html
+++ b/_includes/schema/presets/selectStandard.html
@@ -1,1 +1,2 @@
+{% include schema/widgets/string.html id=include.id title="standardAcronym" -%}
 {%- include schema/widgets/string-i18n.html id=include.id title="name" -%}
